fixed bug on date entry + fixed spacing for tags on entry form

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,10 +40,13 @@ body {
 .ql-container {
     font-size: 1.25rem !important ;
     line-height: 1.75rem !important;
+
+    
+
     border: none !important;
     font-family: sans-serif, 'Times New Roman', Times, serif !important;
-    color: #134e4a !important;
     height: 70% !important;
+    font-weight: 600 !important;
     
 }
 
@@ -88,13 +91,16 @@ body {
 }
 
 .ql-container {
-
-        font-size: 1.125rem !important;
-        line-height: 1.75rem !important;
+    font-size: 1rem !important;
+    line-height: 1.5rem !important;
+    font-weight: 600 !important;
 }
 .ql-editor {
     height: 100% !important;
     padding: 0.75rem 0.75rem !important;
+    font-size: 1.125rem !important;
+    line-height: 1.5rem !important;
+    font-weight: 400 !important;
 }
 
 
@@ -114,8 +120,8 @@ body {
 }
 .ql-editor.ql-blank::before {
     font-style: normal !important;
-    font-weight: lighter !important;
-    font-family: sans-serif !important;
+    font-weight: 400 !important;
+    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !important;
     color: #9ea7ba !important;
     padding: 0px !important;
     margin: 0px !important;
